--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Android04c01</string>
+    <string name="create_notification">Create notification</string>
+    <string name="update_notification">Update notification</string>
+    <string name="create_toast">Create toast</string>
 </resources>
