--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Android-08c01</string>
+    <string name="start">start</string>
+    <string name="clear">clear</string>
+    <string name="show">show</string>
+    <string name="textview">textview</string>
+    <string name="default_frequency">default_frequency</string>
+    <string name="frequency">frequency</string>
 </resources>
