Add song fragment template

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="played_song">Song Played</string>
     <string name="song_chooser">Choose Song</string>
+    <string name="add_song">Add song</string>
 </resources>
