--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Bass master</string>
 
     <!-- Navigation menu -->
     <string name="nav_header_title">Bass master</string>
